--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0;
 }
 body{
-    background-color: seashell;
+    background-color: white;
 }
 .navbar{
     border-bottom: 1px solid rgba(0, 0, 0, 0.13);
