--- a/style.css
+++ b/style.css
@@ -7,47 +7,63 @@
 body{
     background-color: white;
 }
+main{
+    background-color: ;
+}
 .navbar{
     border-bottom: 1px solid rgba(0, 0, 0, 0.13);
+    background-image: linear-gradient(90deg, #DE337D 0%, #B533DE 120%);
+    border-bottom: 1px solid white;
 }
 .navbar-brand{
     font-size: 24px;
-    color: #ECA4A4 !important;
+    color: white !important;
     margin: 0 0 0 0;
     letter-spacing: -1px;   
     display: flex;
 }
 
-.hero-banner{
+/* .hero-banner{
     width: 100vw;
     height: 50px;
     background-image: url("./images/pexels-engin-akyurt-1487701HG.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0 -20px;
-    border: 1px solid rgb(102, 102, 102);
-}
-/* .hero-image{
+    border: 1px solid rgb(0, 0, 0);
+} */
+.hero-image{
     width: 100vw;
     height: 250px;
     background-image: url("./images/WhatsApp\ Image\ 2021-05-13\ at\ 21.08.52.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0 -85px;
-
-} */
+}
 h2{
-    margin-top: 30px;
+    margin: 30px 0 0px 0;
+    background-color: #DE337D;
+    color: white;
+    font-size: 1.6rem;
+    letter-spacing: 3px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.199);
+    /* box-shadow: 0px 2px 10px -2px #B533DE; */
+    
 }
 p{
+    background-color: rgb(231, 231, 231);
     text-align: center;
-    margin: 30px 0 30px 0;
+    margin: 5px 0 30px 0;
+    color: black;
+    box-shadow: 0px 1px 10px -2px rgb(97, 97, 97);
 }
 footer{
     display: flex;
-    flex-direction: column;
     align-items: center;
     width: 100vw;
     height: 80px;
-    background-color: rgba(0, 0, 0, 0.13);
+    background-color: #FA3D3A;
+}
+footer a{
+    color: white;
 }
