--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ footer{
     align-items: center;
     width: 100vw;
     height: 80px;
-    background-color: #FA3D3A;
+    background-color: #B533DE;
 }
 footer a{
     color: white;
