--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&family=Brygada+1918:ital@1&display=swap');
 *{
     box-sizing: border-box;
     margin: 0;
@@ -22,29 +23,21 @@ main{
     letter-spacing: -1px;   
     display: flex;
 }
-
-/* .hero-banner{
-    width: 100vw;
-    height: 50px;
-    background-image: url("./images/pexels-engin-akyurt-1487701HG.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 0 -20px;
-    border: 1px solid rgb(0, 0, 0);
-} */
 .hero-image{
     width: 100vw;
-    height: 250px;
+    height: 270px;
     background-image: url("./images/WhatsApp\ Image\ 2021-05-13\ at\ 21.08.52.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0 -85px;
 }
 h2{
+    height: 23px !important;
+    font-family: 'Baloo Tammudu 2', cursive;
     margin: 30px 0 0px 0;
     background-color: #DE337D;
     color: white;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     letter-spacing: 3px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.199);
     /* box-shadow: 0px 2px 10px -2px #B533DE; */
@@ -53,16 +46,30 @@ h2{
 p{
     background-color: rgb(231, 231, 231);
     text-align: center;
-    margin: 5px 0 30px 0;
+    margin: 5px 0 10px 0;
     color: black;
     box-shadow: 0px 1px 10px -2px rgb(97, 97, 97);
+}
+.coment{
+    font-family: 'Brygada 1918', serif;
+    font-size: 0.9rem;
+    background-color: #F73496;
+    text-align: center;
+    margin: 5px 0 30px 0;
+    padding: 5px;
+    color: white;
+    box-shadow: 0px 1px 10px -2px rgb(97, 97, 97);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 100px;
 }
 footer{
     display: flex;
     align-items: center;
     width: 100vw;
     height: 80px;
-    background-color: #B533DE;
+    background-color: #151116;
 }
 footer a{
     color: white;
