--- a/style.css
+++ b/style.css
@@ -33,11 +33,36 @@ main{
     background-repeat: no-repeat;
     background-position: 0 -85px;
 }
+.pantu-container{
+    position: relative;
+}
+.pantu{
+    width: 100vw;
+    height: 450px;
+    background-image: url("./images/pantumedias.jpeg");
+    background-size: cover;
+    border: 10px solid #B533DE;
+}
+.text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    color: black;
+    font-size: 0.9rem;
+    position: absolute;
+    bottom: 200px;
+    width: 100%;
+    height: 40px;
+    background-color: #b633ded2;
+}
+.text, h2 {
+    font-family: 'Playfair Display', serif;
+}
 h2{
     height: 23px !important;
-    font-family: 'Playfair Display', serif;
     margin: 30px 0 0px 0;
-    background-color: #DE337D;
+    background-color: #B533DE;
     color: black;
     font-size: 1.8rem;
     letter-spacing: 3px;
@@ -51,13 +76,21 @@ p{
     color: black;
     box-shadow: 0px 1px 10px -2px rgb(97, 97, 97);
 }
+.separator{
+    height: 23px;
+    background-image: linear-gradient(90deg, #DE337D 25%, #B533DE 120%);
+    border: 1px solid black;
+}
 .b-100{
     border-radius: 100px;
+}
+.bi-star{
+    color: rgb(216, 203, 27)
 }
 .coment{
     font-family: 'Brygada 1918', serif;
     font-size: 0.9rem;
-    background-color: #8b1550;
+    background-color: #DE337D;
     text-align: center;
     margin: 5px 0 30px 0;
     padding: 5px;
