--- a/style.css
+++ b/style.css
@@ -73,12 +73,22 @@ h2{
     border: 1px solid rgba(0, 0, 0, 0.199);
     /* box-shadow: 0px 2px 10px -2px #DE337D; */
 }
-p{
+.section-container{
+    display: flex;
+    flex-direction: column;
+}
+.sections-text{
+    width: 100%;
+    min-height: 30px;
     background-color: rgb(231, 231, 231);
     text-align: center;
     margin: 5px 0 10px 0;
     color: black;
     box-shadow: 0px 1px 10px -2px rgb(97, 97, 97);
+}
+.contact{
+    text-align: center;
+    width: 100%;
 }
 .separator{
     height: 23px;
@@ -87,6 +97,7 @@ p{
 }
 .b-100{
     border-radius: 100px;
+    text-decoration: none;
 }
 .bi-star{
     color: rgb(216, 203, 27)
