--- a/style.css
+++ b/style.css
@@ -90,9 +90,16 @@ h2{
     text-align: center;
     width: 100%;
 }
+.separator-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
 .separator{
-    height: 23px;
-    background-image: linear-gradient(90deg, #DE337D 25%, #B533DE 120%);
+    width: 40%;
+    height: 3px;
+    background-color: #de337dce;
     border: 1px solid rgba(0, 0, 0, 0.233);
 }
 .b-100{
