--- a/style.css
+++ b/style.css
@@ -7,10 +7,7 @@
     padding: 0;
 }
 body{
-    background-color: white;
-}
-main{
-    background-color: ;
+    background-color: #ffffff;
 }
 .navbar{
     border-bottom: 1px solid rgba(0, 0, 0, 0.13);
@@ -95,6 +92,9 @@ h2{
     justify-content: space-between;
     align-items: center;
     width: 100%;
+}
+.separator-container img{
+    border-radius: 100%;
 }
 .separator{
     width: 40%;
