--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     padding: 0;
 }
 body{
+    width: 100vw;
     background-color: #ffffff;
 }
 .navbar{
@@ -25,7 +26,7 @@ body{
 .hero-image{
     width: 100vw;
     height: 270px;
-    background-image: url("./images/WhatsApp\ Image\ 2021-05-13\ at\ 21.08.52.jpeg");
+    background-image: url("./images/Romi.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0 -85px;
@@ -61,6 +62,7 @@ body{
     font-family: 'Playfair Display', serif;
 }
 h2{
+    width: 100vw;
     height: 23px !important;
     margin: 30px 0 0px 0;
     background-color: #DE337D;
@@ -91,7 +93,7 @@ h2{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 100vw;
 }
 .separator-container img{
     border-radius: 100%;
@@ -127,7 +129,7 @@ h2{
     font-size:1.5rem;
 }
 .footer__img-container{
-    width: 30%;
+    width: auto;
 }
 .footer__img-container img{
     position: relative;
@@ -136,6 +138,7 @@ h2{
 .footer__a-container{
     display: flex; 
     flex-direction: column; 
+    margin-left: 10px;
     width: 85%;
 }
 footer{
@@ -147,4 +150,190 @@ footer{
 }
 footer a{
     color: white;
+}
+@media screen and (min-width: 500px){
+    .hero-image{
+        background-position: 0 -150px;
+    }
+}
+@media screen and (min-width: 700px) {
+    main{
+        width: 60vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    .navbar-collapse{
+        flex-grow: initial;
+        position: relative;
+        right: 20px;
+    }
+    .hero-image{
+        width: 60vw;
+        height: 400px;
+        margin: 0 auto;
+        background-position: 0 -160px;
+    }
+    .pantu{
+        width: 60vw;
+    }
+    .instagram-media{
+        margin:0 auto !important;
+    }
+}
+
+@media screen and (min-width: 1440px){
+    .navbar-collapse{
+        font-size: 1.2rem;
+    }
+    .hero-image{
+        height: 600px;
+        background-position: 0 -300px;
+    }
+    .about{
+        font-size: 1.4rem;
+    }
+    .pantu{
+        height: 600px;
+        background-position: 0 -150px;
+    }
+    .pantu-container:hover{
+        transition: ease 1s;
+        transform: scale(1.05);
+    }
+    .text{
+        font-size: 1.5rem;
+        height: 50px;
+        bottom: 280px;
+    }
+    #carouselExampleSlidesOnly{
+        display: none;
+    }
+    .title{
+        width: 60vw;
+        margin-top: 100px;
+    }
+    .catalogo-container{
+        display: flex;
+        flex-direction: column;
+        width: 60vw;
+    }
+    .catalogo-container .inner{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    .clothes-container{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(10, 1fr);
+        grid-gap: 5px;
+        width: 100%;
+        height: 800px;
+        margin-top: 20px;
+    }
+    .clothes-container div, .texture{
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .clothes-container div:hover{
+        transition: all 1s;
+        transform: scale(1.4);
+    }
+    .pic1{
+        grid-column: 1/2;
+        grid-row: 1/6;
+        background-image: url("./images/poncho2.jpg");
+        background-position: 0 -100px;
+    }
+    .pic2{
+        background-image: url("./images/gorrito.jpeg");
+        grid-column: 1/2;
+        grid-row: 6/11;
+    }
+    .pic3{
+        background-image: url("./images/barbijo-negro.jpg");
+        grid-row: 1/6;
+    }
+    .pic4{
+        background-image: url("./images/bebev.jpg");
+        grid-column: 2/3;
+        grid-row: 6/11;
+    }
+    .pic5{
+        background-image: url("./images/bebe.jpg");
+        grid-row: 1/6;
+        }
+    .pic6{
+        background-image: url("./images/barbijo-blanco.jpg");
+        grid-column: 3/4;
+        grid-row: 6/11;
+    }
+    .verano1{
+        background-image: url("./images/bikini\ grande.jpg");
+        background-position: 0;
+    }
+    .verano2{
+        background-image: url("./images/corpi.jpeg");
+        background-position: -150px;
+    }
+    .verano3{
+        background-image: url("./images/corpiñovioleta.jpg");
+    }
+    .verano4{
+        background-image: url("./images/corpiñoturquesa.jpg");
+        background-position: -100px;
+    }
+    .verano5{
+        background-image: url("./images/Slice.png");
+    }
+    .verano6{
+        background-image: url("./images/Romi.jpeg");
+    }
+    .description-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 70px 0;
+    }
+    .coment, .b-100{
+        min-width: 610px;
+        border-radius: 0px;
+        box-shadow: 1px 1px 5px -1px rgb(97, 97, 97);
+    }
+    .sections-text{
+        width: 30vw;
+    }
+    .section-container{
+        align-items: center;
+    }
+    .texture{
+        margin-bottom: 10px;
+        width: 32vw;
+        height: 450px;
+        background-image: url("./images/pexels-anete-lusina-4792079.jpg");
+    }
+    .about{
+        width: inherit;
+    }
+    .cc-container{
+        display: flex;
+        width: 60vw;
+        margin-bottom: 20px;
+    }
+    .materials{
+        border-radius: 100px;
+    }
+@media screen and (min-width: 2560px){
+    .hero-image{
+        height: 800px;
+        background-position: 0 -400px;
+    }
+    .about{
+        font-size: 1.5rem;
+    }
 }
