--- a/style.css
+++ b/style.css
@@ -182,38 +182,8 @@ footer a{
     .instagram-media{
         margin:0 auto !important;
     }
-}
-
-@media screen and (min-width: 1440px){
-    .navbar-collapse{
-        font-size: 1.2rem;
-    }
-    .hero-image{
-        height: 600px;
-        background-position: 0 -300px;
-    }
-    .about{
-        font-size: 1.4rem;
-    }
-    .pantu{
-        height: 600px;
-        background-position: 0 -150px;
-    }
-    .pantu-container:hover{
-        transition: ease 1s;
-        transform: scale(1.05);
-    }
-    .text{
-        font-size: 1.5rem;
-        height: 50px;
-        bottom: 280px;
-    }
     #carouselExampleSlidesOnly{
         display: none;
-    }
-    .title{
-        width: 60vw;
-        margin-top: 100px;
     }
     .catalogo-container{
         display: flex;
@@ -248,7 +218,6 @@ footer a{
         grid-column: 1/2;
         grid-row: 1/6;
         background-image: url("./images/poncho2.jpg");
-        background-position: 0 -100px;
     }
     .pic2{
         background-image: url("./images/gorrito.jpeg");
@@ -294,6 +263,38 @@ footer a{
     .verano6{
         background-image: url("./images/Romi.jpeg");
     }
+    .title{
+        width: 60vw;
+        margin-top: 100px;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .navbar-collapse{
+        font-size: 1.2rem;
+    }
+    .hero-image{
+        height: 600px;
+        background-position: 0 -300px;
+    }
+    .about{
+        font-size: 1.4rem;
+    }
+    .pantu{
+        height: 600px;
+        background-position: 0 -150px;
+    }
+    .pantu-container:hover{
+        transition: ease 1s;
+        transform: scale(1.05);
+    }
+    .text{
+        font-size: 1.5rem;
+        height: 50px;
+        bottom: 280px;
+    }
+
+    
     .description-container{
         display: flex;
         flex-direction: column;
@@ -301,20 +302,20 @@ footer a{
         margin: 70px 0;
     }
     .coment, .b-100{
-        min-width: 610px;
+        min-width: 300px;
         border-radius: 0px;
         box-shadow: 1px 1px 5px -1px rgb(97, 97, 97);
     }
     .sections-text{
-        width: 30vw;
+        max-width: 100%;
     }
     .section-container{
         align-items: center;
     }
     .texture{
         margin-bottom: 10px;
-        width: 32vw;
-        height: 450px;
+        width: 100%;
+        height: 300px;
         background-image: url("./images/pexels-anete-lusina-4792079.jpg");
     }
     .about{
@@ -322,12 +323,18 @@ footer a{
     }
     .cc-container{
         display: flex;
+        justify-content: center;
         width: 60vw;
         margin-bottom: 20px;
     }
+    .cc-container > div{
+        width: 50%;
+    }
     .materials{
+        width: 60vw;
         border-radius: 100px;
     }
+    
 @media screen and (min-width: 2560px){
     .hero-image{
         height: 800px;
